k8s/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  type: NodePort
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30082
    protocol: TCP
    name: http
  selector:
    app: payment-service
